Changes file for Business-OnlinePayment-CashCow

$Id: Changes,v 1.4 2005-08-09 08:38:29 jonasbn Exp $

Tue Aug  9 2005 (jonasbn)

- Cleaned the code some more

- All unit-tests pass and the Net::SSLeay warning seems to have gone away
  moved some caveat bullets to the TODO list instead

- Cleared out unecessary referer handling

Sat Aug  6 2005 (jonasbn)

- Fixed submit test, so we skip if no shopid is provided

- Added shopid flag to Build.PL

Wed Aug  3 2005 (jonasbn)

- We have a release candidate