@@ -1,8 +1,10 @@
 Changes file for Business-OnlinePayment-CashCow
 
-$Id: Changes,v 1.4 2005-08-09 08:38:29 jonasbn Exp $
+$Id: Changes,v 1.5 2005-08-09 09:30:30 jonasbn Exp $
 
 Tue Aug  9 2005 (jonasbn)
+
+- Updated POD
 
 - Cleaned the code some more
 
